Add link to projects on main page

--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,16 @@ span {
   color: #06d6a0;
 }
 
+a {
+  text-decoration: none;
+  color: #ffd166;
+}
+
+a:hover {
+  color: #ef476f;
+  transition: 200ms;
+}
+
 #bunny-photo {
   width: 300px;
   border-radius: 20px;
