--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -9,8 +10,17 @@ body {
   color: #073b4c;
   display: flex;
   justify-content: center;
+  align-items: center;
   box-sizing: border-box;
   font-size: 1.2rem;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
 }
 
 code {
@@ -30,6 +40,7 @@ nav {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
+  align-self: flex-start;
 }
 
 nav a {
@@ -92,7 +103,7 @@ a:hover {
   width: 300px;
   border-radius: 20px;
   border: 8px solid #ffd166;
-  margin: 2rem;
+  /* margin: 2rem; */
 }
 
 .home-container {
@@ -120,8 +131,8 @@ a:hover {
   flex-wrap: wrap;
 }
 
-.projects-carousel img {
-  width: 300px;
+.home-container img {
+  max-width: 350px;
   border-radius: 20px;
   border: 8px solid #06d6a0;
   margin: 1rem;
@@ -164,10 +175,19 @@ a:hover {
 @media (max-width: 700px) {
   .home-header {
     flex-direction: column;
-  } 
+  }
 
   nav {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start
+  }
+
+  .home-container {
+    margin-left: 8px;
+    margin-right: 8px;
+  }
+
+  .home-container img {
+    max-width: 80%;
   }
 }
