--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+  margin: 0;
+}
 
 body {
   margin: 0;
@@ -6,22 +9,22 @@ body {
     sans-serif;
   /* -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; */
-  background-color: #118ab2;
+  /* background-color: none; */
   color: #073b4c;
-  display: flex;
-  justify-content: center;
+  /* display: flex; */
+  /* justify-content: center; */
   align-items: center;
   box-sizing: border-box;
   font-size: 1.2rem;
 }
 
-.app {
+/* .app {
   display: flex;
   flex-direction: column;
   width: 100vw;
   justify-content: center;
   align-items: center;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -40,12 +43,13 @@ nav {
   text-align: center;
   display: flex;
   justify-content: space-evenly;
-  align-self: flex-start;
+  position: fixed;
+  /* align-self: flex-start; */
 }
 
 nav a {
   margin: 8px;
-  color: #ffd166;
+  color: blue;
   text-decoration: none;
   font-size: 2rem;
   font-size: 42px;
@@ -56,13 +60,19 @@ nav a {
 .home-header {
   display: flex;
   flex: 1 1 0px;
-  margin: 6rem 2rem;
+  margin: 0;
   align-items: center;
   justify-content: center;
+  height: 100vh;
+  background-color: #ffd166;
+}
+
+.home-header > * {
+  margin: 2rem;
 }
 
 .home-header p {
-  font-size: 2rem;
+  font-size: 3rem;
   max-width: 600px;
 }
 
@@ -71,18 +81,29 @@ nav a {
 }
 
 .intro h1 {
-  font-size: 1rem;
+  font-size: 2rem;
   color: #073b4c;
-  margin: 0;
+  margin: 10px 0;
 }
 
 .big-header {
-  font-size: 4rem;
-  margin: 0;
+  font-size: 6rem;
+  margin: 10px 0;
+}
+
+.intro p {
+  margin: 10px 0;
 }
 
 h2.big-header {
   color: #ef476f;
+}
+
+.home-header img {
+  width: 450px;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
 span {
@@ -99,21 +120,12 @@ a:hover {
   transition: 200ms;
 }
 
-#bunny-photo {
-  width: 300px;
-  border-radius: 20px;
-  border: 8px solid #ffd166;
-  /* margin: 2rem; */
-}
-
 .home-container {
   display: flex;
   flex-direction: column;
-  max-width: 900px;
-  margin: 4rem;
-  border: 8px solid #ffd166;
   border-radius: 20px;
   padding: 12px;
+  width: 100vw;
 }
 
 .home-container h4 {
@@ -179,7 +191,8 @@ a:hover {
 
   nav {
     flex-direction: column;
-    align-items: flex-start
+    align-items: flex-start;
+    align-self: flex;
   }
 
   .home-container {
