Add media queries for ipad size

--- a/less/styles.less
+++ b/less/styles.less
@@ -74,6 +74,10 @@ nav a {
   @media screen and (max-width: 1100px), screen and (max-height: 550px) {
     font-size: @small-text;
   }
+
+  @media screen and (max-width: 800px), screen and (max-height: 400px) {
+    font-size: @extra-small-text;
+  }
 }
 
 .intro {
@@ -96,6 +100,9 @@ nav a {
   font-size: @extra-large-text;
   @media screen and (max-width: 1100px), screen and (max-height: 550px) {
     font-size: @very-large-text;
+  }
+  @media screen and (max-width: 800px), screen and (max-height: 400px) {
+    font-size: @large-text;
   }
 }
 
@@ -128,6 +135,9 @@ h2.big-header {
   align-self: flex-start;
   @media screen and (max-width: 1100px), screen and (max-height: 550px) {
     font-size: @medium-text;
+  }
+  @media screen and (max-width: 800px), screen and (max-height: 400px) {
+    font-size: @small-text;
   }
 }
 
@@ -204,12 +214,18 @@ h2.big-header {
   @media screen and (max-width: 1100px), screen and (max-height: 550px) {
     width: 300px;
   }
+  @media screen and (max-width: 800px), screen and (max-height: 400px) {
+    width: 250px;
+  }
 }
 
 .project h3 {
   font-size: @medium-text;
   @media screen and (max-width: 1100px), screen and (max-height: 550px) {
     font-size: @small-text;
+  }
+  @media screen and (max-width: 800px), screen and (max-height: 400px) {
+    font-size: @extra-small-text;
   }
 }
 
