--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,11 @@ nav a {
   height: 100vh;
   background-color: #f1faee;
 }
+@media screen and (max-width: 650px), screen and (max-height: 400px) {
+  .home-header {
+    flex-direction: column;
+  }
+}
 .home-header > * {
   margin: 2rem;
 }
@@ -96,6 +101,11 @@ h2.big-header {
     max-width: 300px;
   }
 }
+@media screen and (max-width: 650px), screen and (max-height: 400px) {
+  .home-header img {
+    max-width: 250px;
+  }
+}
 .home-container {
   display: flex;
   flex-direction: column;
@@ -135,6 +145,12 @@ h2.big-header {
   align-items: center;
   margin: 5rem;
 }
+@media screen and (max-width: 650px), screen and (max-height: 400px) {
+  .about-me content {
+    flex-direction: column;
+    margin: 1rem;
+  }
+}
 .technologies,
 .projects-carousel {
   display: flex;
@@ -150,6 +166,11 @@ h2.big-header {
 @media screen and (max-width: 1100px), screen and (max-height: 550px) {
   .technologies img {
     width: 90px;
+  }
+}
+@media screen and (max-width: 650px), screen and (max-height: 400px) {
+  .technologies img {
+    width: 75px;
   }
 }
 .about-me-text {
@@ -168,6 +189,11 @@ h2.big-header {
 .about-me-text p {
   margin: 1rem 0;
   line-height: 2rem;
+}
+@media screen and (max-width: 800px), screen and (max-height: 400px) {
+  .about-me-text p {
+    line-height: 1.5rem;
+  }
 }
 .project {
   display: flex;
