--- a/less/styles.less
+++ b/less/styles.less
@@ -122,7 +122,7 @@ h2.big-header {
     max-width: 300px;
   }
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    max-width: 250px;
+    max-width: 220px;
   }
 }
 
@@ -160,6 +160,12 @@ h2.big-header {
   justify-content: center;
 }
 
+.home-projects h4 {
+ align-self: flex-end;
+ padding-right: 4rem;
+ padding-top: 4rem;
+}
+
 .about-me span {
   color: @primary-color;
 }
@@ -170,7 +176,8 @@ h2.big-header {
   margin: 5rem;
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
     flex-direction: column;
-    margin: 1rem
+    margin: .25rem
+
   }
 }
 
@@ -190,7 +197,8 @@ h2.big-header {
     width: 90px;
   }
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
-    width: 75px
+    width: 75px;
+    margin: .25rem;
   }
 }
 
@@ -215,6 +223,12 @@ h2.big-header {
 }
 
 //projects
+
+
+
+.project-header {
+  font-size: 300px;
+}
 
 .project {
   display: flex;
