--- a/less/styles.less
+++ b/less/styles.less
@@ -43,15 +43,15 @@ a:hover,
 nav {
   margin: 8px;
   text-align: center;
-  display: none;
+  display: flex;
   justify-content: space-evenly;
+  position: fixed;
 }
 
 nav a {
   margin: 8px;
-  color: blue;
   text-decoration: none;
-  font-size: @medium-text;
+  font-size: @small-text;
 }
 
 /* Home */
