--- a/src/styles.css
+++ b/src/styles.css
@@ -21,14 +21,14 @@ a:hover,
 nav {
   margin: 8px;
   text-align: center;
-  display: none;
+  display: flex;
   justify-content: space-evenly;
+  position: fixed;
 }
 nav a {
   margin: 8px;
-  color: blue;
   text-decoration: none;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 /* Home */
 .home-header {
