--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,11 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: #1d3557;
 }
-h1 {
+.page-header {
   font-size: 4rem;
-  color: #ef476f;
+  color: #e63946;
+  margin: 4rem 2rem;
+  text-align: center;
 }
 a,
 .project h3 {
@@ -29,6 +31,11 @@ nav a {
   margin: 8px;
   text-decoration: none;
   font-size: 2rem;
+}
+@media screen and (max-width: 650px), screen and (max-height: 400px) {
+  nav a {
+    font-size: 1.5rem;
+  }
 }
 /* Home */
 .home-header {
@@ -241,6 +248,9 @@ h2.big-header {
 #project-detail {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 4rem;
 }
 #project-detail img {
   border-radius: 20px;
