--- a/less/styles.less
+++ b/less/styles.less
@@ -59,6 +59,22 @@ nav a {
   }
 }
 
+//social icons
+.sidebar {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  position: fixed;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.social {
+  padding: 8px;
+  width: 50px;
+  opacity: 60%;
+}
+
 /* Home */
 
 .home-header {
@@ -156,19 +172,16 @@ h2.big-header {
 
 .about-me {
   background-color: @secondary-color;
-  
 }
 
 .about-me,
 .home-projects {
-  align-items: center;
   justify-content: center;
 }
 
 .home-projects h4 {
- align-self: flex-end;
- padding-right: 4rem;
- padding-top: 4rem;
+  align-self: center;
+  padding-top: 4rem;
 }
 
 .about-me span {
@@ -181,8 +194,7 @@ h2.big-header {
   margin: 5rem;
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
     flex-direction: column;
-    margin: .25rem
-
+    margin: 0.25rem;
   }
 }
 
@@ -203,7 +215,7 @@ h2.big-header {
   }
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
     width: 75px;
-    margin: .25rem;
+    margin: 0.25rem;
   }
 }
 
@@ -228,8 +240,6 @@ h2.big-header {
 }
 
 //projects
-
-
 
 .project-header {
   font-size: 300px;
@@ -291,4 +301,3 @@ h2.big-header {
   max-width: 800px;
   margin-bottom: 3rem;
 }
-
