--- a/less/styles.less
+++ b/less/styles.less
@@ -60,16 +60,17 @@ nav a {
 }
 
 //social icons
-.sidebar {
+.links {
   display: flex;
   height: 100vh;
   flex-direction: column;
   position: fixed;
   justify-content: flex-end;
   align-items: center;
+  margin-bottom: 10rem;
 }
 
-.social {
+.links img {
   padding: 8px;
   width: 50px;
   opacity: 60%;
