Adjust sizes of social icons

--- a/less/styles.less
+++ b/less/styles.less
@@ -72,8 +72,11 @@ nav a {
 
 .links img {
   padding: 8px;
-  width: 50px;
+  width: 75px;
   opacity: 60%;
+  @media screen and (max-width: 800px), screen and (max-height: 400px) {
+    width: 50px
+  }
 }
 
 /* Home */
