--- a/less/styles.less
+++ b/less/styles.less
@@ -70,12 +70,14 @@ nav a {
   margin-bottom: 10rem;
 }
 
-.links img {
+.social-icon {
   padding: 8px;
   width: 75px;
+  height: 75px;
   opacity: 60%;
   @media screen and (max-width: 800px), screen and (max-height: 400px) {
-    width: 50px
+    width: 50px;
+    height: 50px;
   }
 }
 
