--- a/src/styles.css
+++ b/src/styles.css
@@ -46,14 +46,16 @@ nav a {
   align-items: center;
   margin-bottom: 10rem;
 }
-.links img {
+.social-icon {
   padding: 8px;
   width: 75px;
+  height: 75px;
   opacity: 60%;
 }
 @media screen and (max-width: 800px), screen and (max-height: 400px) {
-  .links img {
+  .social-icon {
     width: 50px;
+    height: 50px;
   }
 }
 /* Home */
