--- a/less/styles.less
+++ b/less/styles.less
@@ -79,6 +79,10 @@ nav a {
     width: 50px;
     height: 50px;
   }
+  @media screen and (max-width: 650px), screen and (max-height: 400px) {
+    width: 35px;
+    height: 35px;
+  }
 }
 
 /* Home */
@@ -268,6 +272,9 @@ h2.big-header {
   }
   @media screen and (max-width: 800px), screen and (max-height: 400px) {
     width: 250px;
+  }
+  @media screen and (max-width: 400) {
+    width: 100px;
   }
 }
 
