--- a/src/styles.css
+++ b/src/styles.css
@@ -124,20 +124,29 @@ nav a {
 }
 h2.big-header {
   color: #e63946;
+  font-family: Monaco, Consolas, Lucida Console, monospace;
+  overflow: hidden;
+  border-right: 0.15em solid #e63946;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: 0.15em;
+  animation: typing 2.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
-.home-header img {
-  max-width: 450px;
-  border-radius: 20px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-}
-@media screen and (max-width: 1100px), screen and (max-height: 550px) {
-  .home-header img {
-    max-width: 300px;
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
   }
 }
-@media screen and (max-width: 650px), screen and (max-height: 400px) {
-  .home-header img {
-    max-width: 220px;
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #e63946;
   }
 }
 .home-container {
