Fix margin issue for smaller devices

--- a/less/styles.less
+++ b/less/styles.less
@@ -238,7 +238,7 @@ h2.big-header {
   max-width: 800px;
   flex: 1 1 0;
   @media screen and (max-width: 650px), screen and (max-height: 550px) {
-    font-size: @extra-small-text;
+    font-size: @ultra-small-text;
   }
 }
 
@@ -247,7 +247,7 @@ h2.big-header {
 .project {
   display: flex;
   align-items: center;
-  margin: 6rem;
+  margin: 3rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
     border-radius: 5px;
