--- a/less/styles.less
+++ b/less/styles.less
@@ -269,6 +269,19 @@ h2.big-header {
   margin-bottom: 2rem;
 }
 
+.project-tools {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tool {
+  border: 2px solid @accent-color;
+  margin: 0.5rem;
+  padding: 0 0.5rem;
+  border-radius: 5px;
+  font-family: Monaco, Consolas, Lucida Console, monospace;
+}
+
 .project img {
   width: 250px;
   margin: 1rem;
