--- a/less/styles.less
+++ b/less/styles.less
@@ -67,6 +67,10 @@ nav a {
     width: 35px;
     height: 35px;
   }
+  @media screen and (max-width: 400px) {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 /* Home */
@@ -223,7 +227,7 @@ h2.big-header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5rem;
+  margin: 3rem;
   @media screen and (max-width: 650px), screen and (max-height: 400px) {
     flex-direction: column;
     margin: 0.25rem;
@@ -267,6 +271,19 @@ h2.big-header {
 .project-content h3 {
   font-size: @small-text;
   margin-bottom: 2rem;
+}
+
+.project button {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0.5rem;
+  margin: 0.5rem;
+  background-color: @secondary-color;
+  border-radius: 15px;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
 
 .project-tools {
