--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,12 @@ nav a {
     height: 35px;
   }
 }
+@media screen and (max-width: 400px) {
+  .social-icon {
+    width: 20px;
+    height: 20px;
+  }
+}
 /* Home */
 .home-header {
   display: flex;
@@ -186,7 +192,7 @@ h2.big-header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5rem;
+  margin: 3rem;
 }
 @media screen and (max-width: 650px), screen and (max-height: 400px) {
   .about-me content {
@@ -226,6 +232,18 @@ h2.big-header {
 .project-content h3 {
   font-size: 2rem;
   margin-bottom: 2rem;
+}
+.project button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  background-color: #a8dadc;
+  border-radius: 15px;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
 .project-tools {
   display: flex;
